upload module caption converted in multi line textarea and emoji picker cateries visibility issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -402,3 +402,7 @@ a.customPlayBtn::after {
   scroll-snap-type: y mandatory;
   height: 100vh;
 } */
+
+.EmojiPickerReact {
+  --epr-category-navigation-button-size: 37px !important;
+}
